@@ -1,0 +1,32 @@
+#lang racket/load
+
+(module client racket
+  (require 2htdp/universe 2htdp/image)
+  
+  ;; Color -> Boolean 
+  (define (client c)
+    (big-bang #true
+              (to-draw (lambda (w) (text (if w "hello world" "good bye") 22 c)))
+              (register LOCALHOST)
+              (name c)
+              (on-receive (lambda (w msg) (not w)))))
+  
+  (launch-many-worlds (client "blue") (client "red")))
+
+(module server racket 
+  (require 2htdp/universe)
+  
+  (define (server tick-rate)
+    (universe '()
+              (on-new (lambda (w n) (make-bundle (cons n w) '() '())))
+              (on-tick 
+               (lambda (w*)
+                 (make-bundle w* (map (lambda (w) (make-mail w 'go)) w*) '()))
+               tick-rate)
+              (on-msg void)))
+  
+  (thread server))
+
+(require 'server)
+
+(require 'client)
